// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getBundleContent sass resource array 1`] = `
"$color-ui-info: #78A4FA !default;
$color-ui-positive: #13CE66 !default;
$color-ui-negative: #FF4949 !default;
$color-ui-warning: #FFC82C !default;
@mixin transform($property) {
  -webkit-transform: $property;
  -ms-transform: $property;
  transform: $property;
}
"
`;

exports[`getBundleContent sass resource array with directory 1`] = `
"$color-ui-info: #78A4FA !default;
$color-ui-positive: #13CE66 !default;
$color-ui-negative: #FF4949 !default;
$color-ui-warning: #FFC82C !default;
@mixin transform($property) {
  -webkit-transform: $property;
  -ms-transform: $property;
  transform: $property;
}
"
`;

exports[`getBundleContent sass resource path 1`] = `
"$color-ui-info: #78A4FA !default;
$color-ui-positive: #13CE66 !default;
$color-ui-negative: #FF4949 !default;
$color-ui-warning: #FFC82C !default;
"
`;

exports[`getBundleContent sass resource path with directory 1`] = `
"$color-ui-info: #78A4FA !default;
$color-ui-positive: #13CE66 !default;
$color-ui-negative: #FF4949 !default;
$color-ui-warning: #FFC82C !default;
"
`;

exports[`getBundleResult file name and project directory path 1`] = `
"$color-ui-info: #78A4FA !default;
$color-ui-positive: #13CE66 !default;
$color-ui-negative: #FF4949 !default;
$color-ui-warning: #FFC82C !default;
"
`;

exports[`getBundleResult file path 1`] = `
"$color-ui-info: #78A4FA !default;
$color-ui-positive: #13CE66 !default;
$color-ui-negative: #FF4949 !default;
$color-ui-warning: #FFC82C !default;
"
`;

exports[`getSassLoaderOption get sass loader option 1`] = `
Object {
  "additionalData": "$color-ui-info: #78A4FA !default;
$color-ui-positive: #13CE66 !default;
$color-ui-negative: #FF4949 !default;
$color-ui-warning: #FFC82C !default;
@mixin transform($property) {
  -webkit-transform: $property;
  -ms-transform: $property;
  transform: $property;
}
",
  "implementation": "dart-sass",
}
`;
